--- a/foundation/templates/foundation/icons.html
+++ b/foundation/templates/foundation/icons.html
@@ -6,6 +6,7 @@ Foundation Icons glyphs preview
 {% endblock title %}    
 
 {% block css %}
+    <link href="{% static "foundation/css/foundation-icons.css" %}" rel="stylesheet"/>
     <style>
       * {
         -moz-box-sizing: border-box;
