--- a/foundation/templates/foundation/icons.html
+++ b/foundation/templates/foundation/icons.html
@@ -1,5 +1,5 @@
 {% extends "foundation/base.html" %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}
 Foundation Icons glyphs preview
